# eoa-agent-skills

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  cli-helpers.ts  coverage-detail.json  coverage.json  index.ts  mcp-config.example.json  openclaw.json  package.json  portkey_eoa_skill.js  portkey_eoa_skill.ts  tsconfig.json  tsconfig.src.json  tsconfig.test.json
.github/workflows/: coverage-badge.yml  ironclaw-wasm.yml  publish.yml  test.yml
ironclaw-wasm/: Cargo.toml  README.md  portkey-eoa-ironclaw.capabilities.json
ironclaw-wasm/src/: aelf.rs  constants.rs  contract.rs  http.rs  lib.rs  types.rs  util.rs  wallet.rs  workspace.rs
ironclaw-wasm/src/actions/: bridge.rs  mod.rs  query.rs  transaction.rs  wallet.rs
lib/: aelf.ts  api.ts  config.ts  constants.ts  crypto.ts  errors.ts  runtime-version.ts  storage.ts  types.ts  wallet-context.ts
scripts/release/: build-ironclaw-wasm.sh  package-ironclaw-bundle.sh
src/core/: bridge.ts  contract.ts  query.ts  transfer.ts  wallet.ts
src/mcp/: error.ts  server.ts  signer-input.ts
tests/e2e/: mcp-verify.ts
tests/unit/: aelf.test.ts  api-http.test.ts  bridge-core.test.ts  chain-core-mock-state.ts  config.test.ts  contract-core.test.ts  crypto.test.ts  exports.test.ts  ironclaw-config.test.ts  ironclaw-setup.test.ts  ironclaw-skill.test.ts  ironclaw-wasm.test.ts  mcp-annotations-raw.test.ts  mcp-annotations.test.ts  mcp-error.test.ts  mcp-signer-input.test.ts  query-core.test.ts  storage.test.ts  transfer-core.test.ts  wallet-context.test.ts  wallet-core.test.ts
