[package]
name = "portkey_eoa_ironclaw"
version = "1.2.6"
edition = "2021"
description = "Portkey EOA native IronClaw WASM tool"
license = "MIT"
publish = false

[dependencies]
aelf-sdk = { version = "=0.1.0-alpha.1", default-features = false }
async-trait = "0.1"
http = "1"
pollster = "0.4"
prost = "0.14"
prost-reflect = { version = "0.16.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
